--- a/sources.html
+++ b/sources.html
@@ -9,7 +9,7 @@ layout: default
   <div class="span8 offset4">
 
 
-  <p>このサイトは神奈川県川崎市の<a href="http://www.city.kawasaki.jp/230/page/0000065034.html" target="_blank">平成27年度予算議案及び予算説明資料の川崎市一般会計予算（議案第46後号）</a>のうち、隷と項のみを対象としています。</p>
+  <p>このサイトは神奈川県川崎市の<a href="http://www.city.kawasaki.jp/230/page/0000065034.html" target="_blank">平成27年度予算議案及び予算説明資料の川崎市一般会計予算（議案第46後号）</a>のうち、款と項のみを対象としています。</p>
   </div>
 </div>
 
@@ -50,7 +50,7 @@ If you know of data published in this way for your country, please email us at <
 
 <div class="row">
   <div class="span8 offset4">
-  今回の<strong>Where Does My Money Go?（川崎市版）</strong> は川崎市の平成27年度一般会計予算のうち、隷と項のみを対象としていますが、今後より詳細な目まで対象を広げることも考えています。
+  今回の<strong>Where Does My Money Go?（川崎市版）</strong> は川崎市の平成27年度一般会計予算のうち、款と項のみを対象としていますが、今後より詳細な目まで対象を広げることも考えています。
 
   </div>
 </div>
