--- a/index.html
+++ b/index.html
@@ -75,12 +75,9 @@ yepnope({
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
     <select id="kwsk_category-type">
-      <option value="use" selected="selected"></option>
+      <option value="use" selected="selected">使いみち</option>
       <option value="legal" selected="">款・別（財政法上の分類）</option>
     </select>
-  </div>
-  <div>
-    <h2 style="width:240px;display:inline-block;vertical-align:top;">あなたの世帯タイプは？</h2>
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">あなたの世帯タイプは？</h2>
