--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@ yepnope({
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
     <select id="kwsk_fiscal-year">
-      <option value="2015" selected="selected">平成 27 年度</option>
-      <option value="2014" selected="">平成 26 年度</option>
+      <option value="2015" selected>平成 27 年度</option>
+      <option value="2014">平成 26 年度</option>
     </select>
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
     <select id="kwsk_category-type">
-      <option value="use" selected="selected">使いみち</option>
-      <option value="legal" selected="">款・別（財政法上の分類）</option>
+      <option value="use" selected>使いみち</option>
+      <option value="legal">款・別（財政法上の分類）</option>
     </select>
   </div>
   <div>
