--- a/legend.html
+++ b/legend.html
@@ -6,10 +6,8 @@ title: The Daily Bread
 {% for categorytype in site.data.categorytypes %}
 <h2>{{ categorytype.text }}</h2>
 <table>
-  {% for config in categorytype.config %}
   <tr>
-  <td>{{ config.icon }}</td>
+  <td>{{ categorytype.config }}</td>
   </tr>
-  {% endfor %}
 </table>
 {% endfor %}
