--- a/legend.html
+++ b/legend.html
@@ -6,7 +6,7 @@ title: The Daily Bread
 {% for categorytype in site.data.categorytypes %}
 <h2>{{ categorytype.text }}</h2>
 <table>
-  {% for config in categorytype.config %}
+  {% for config in categorytype.config.keys %}
   <tr>
   <td>{{ config }} : {{ config.value }}</td>
   </tr>
