--- a/legend.html
+++ b/legend.html
@@ -8,7 +8,7 @@ title: The Daily Bread
 <table>
   {% for config in categorytype.config %}
   <tr>
-  <td>{{ config.id }} : {{ config.data }}</td>
+  <td>{{ config }} : {{ config.data }}</td>
   </tr>
   {% endfor %}
 </table>
