--- a/legend.html
+++ b/legend.html
@@ -6,7 +6,7 @@ title: The Daily Bread
 {% for categorytype in site.data.categorytypes %}
 <h2>{{ categorytype.text }}</h2>
 <table>
-  {% for config in categorytype %}
+  {% for config in categorytype.config %}
   <tr>
   <td bgcolor="{{ config.data.bcolor }}"><img src="{{ config.data.icon }}" /></td>
   </tr>
