--- a/legend.html
+++ b/legend.html
@@ -9,7 +9,10 @@ title: The Daily Bread
   {% for config in categorytype.config %}
   <tr>
   <td>
-    <object type="image/svg+xml" data="{{ config.data.icon }}" height="70" width="70"></object>
+    <object type="image/svg+xml" data="{{ config.image.icon }}" height="30" width="30"></object>
+  </td>
+  <td>
+    <p>{{ config.data }}</p>
   </td>
   </tr>
   {% endfor %}
