--- a/bubbletree.html
+++ b/bubbletree.html
@@ -65,6 +65,23 @@ title: 使途別予算額
 
   </script>
 
+  <div>
+    <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
+    <select id="kwsk_fiscal-year">
+    {% for fiscalyear in site.data.fiscalyears %}
+      <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
+    {% endfor %}
+    </select>
+  </div>
+  <div>
+    <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
+    <select id="kwsk_category-type">
+    {% for categorytype in site.data.categorytypes %}
+      <option value="{{ categorytype.id }}" {{ categorytype.selected }}>{{ categorytype.text }}</option>
+    {% endfor %}
+    </select>
+  </div>
+
   <div class="bubbletree-wrapper">
     <div id="bubbletree" class="bubbletree"></div>
   </div>
