--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Daily Bread
+title: 使途一日あたり
 ---
 
 <script>
@@ -15,7 +15,10 @@ yepnope({
     '/js/libs/raphael-min.js',
     '/js/aggregator.js',
     '/css/dailybread.css',
-    '/js/setting.js?20150410',
+    '/js/customlibs/esprima.js?20150410',
+    '/js/customlibs/js-yaml.js?20150410',
+    // '/js/setting.js?20150410',
+    '/js/setter.js?20150410',
     '/js/dailybread.js?d20150410'
   ],
   complete: function() {
@@ -24,9 +27,21 @@ yepnope({
 
       $(function () {
 
+        // イベント：会計年度
+        $("#fiscal-year").change(function(){
+          Settings.setDailybread(db, $("#category-type").value, this.value);
+        });
+        // イベント：分類タイプ
+        $("#category-type").change(function(){
+          Settings.setDailybread(db, this.value, $("#fiscal-year").value);
+        });
+
+        // ページロード
         $('#preloader .txt').html('loading data');
 
-       var db = new OpenSpending.DailyBread($('#dailybread'));
+        var db = new OpenSpending.DailyBread($('#dailybread'));
+        Settings.setDailybread(db, $("#category-type").value, $("#fiscal-year").value);
+
        new OpenSpending.Aggregator({
            apiUrl: 'http://openspending.org/api',
            //localApiCache: 'aggregate.json',
@@ -37,18 +52,18 @@ yepnope({
            breakdown: 'Subcategory',
            callback: function(data) {
 
-            $('#content-wrap').show();
-            $('#preloader').remove();
+              $('#content-wrap').show();
+              $('#preloader').remove();
 
-            db.setDataFromAggregator(data, ['unknown']);
-            db.setIconLookup(function(name) {
-              var style = OpenSpending.Styles.Cofog[name];
-              if (style != undefined) {
-               return style['icon'];
-              }
-              return 'icons/unknown.svg';
-            });
-            db.draw();
+              db.setDataFromAggregator(data, ['unknown']);
+              db.setIconLookup(function(name) {
+                var style = OpenSpending.Styles.Cofog[name];
+                if (style != undefined) {
+                 return style['icon'];
+                }
+                return 'icons/unknown.svg';
+              });
+              db.draw();
            }
         });
 
@@ -58,7 +73,6 @@ yepnope({
   }
 });
 
-
 </script>
 
 <div id="dailybread">
@@ -67,7 +81,7 @@ yepnope({
   -->
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
-    <select id="kwsk_fiscal-year">
+    <select id="fiscal-year">
     {% for fiscalyear in site.data.fiscalyears %}
       <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
     {% endfor %}
@@ -75,7 +89,7 @@ yepnope({
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
-    <select id="kwsk_category-type">
+    <select id="category-type">
     {% for categorytype in site.data.categorytypes %}
       <option value="{{ categorytype.id }}" {{ categorytype.selected }}>{{ categorytype.text }}</option>
     {% endfor %}
