--- a/index.html
+++ b/index.html
@@ -29,45 +29,20 @@ yepnope({
 
         // イベント：会計年度
         $("#fiscal-year").change(function(){
-          Settings.setDailybread(db, $("#category-type").value, this.value);
+          Setter.setDailybread(db, $("#category-type").value, this.value);
         });
         // イベント：分類タイプ
         $("#category-type").change(function(){
-          Settings.setDailybread(db, this.value, $("#fiscal-year").value);
+          Setter.setDailybread(db, this.value, $("#fiscal-year").value);
         });
 
         // ページロード
         $('#preloader .txt').html('loading data');
 
         var db = new OpenSpending.DailyBread($('#dailybread'));
-        Settings.setDailybread(db, $("#category-type").value, $("#fiscal-year").value);
-
-       new OpenSpending.Aggregator({
-           apiUrl: 'http://openspending.org/api',
-           //localApiCache: 'aggregate.json',
-           dataset: OpenSpending.identifier,
-           drilldowns: ['Category', 'Subcategory'],
-           cuts: ['year:' + OpenSpending.year],
-           rootNodeLabel: 'Total',
-           breakdown: 'Subcategory',
-           callback: function(data) {
-
-              $('#content-wrap').show();
-              $('#preloader').remove();
-
-              db.setDataFromAggregator(data, ['unknown']);
-              db.setIconLookup(function(name) {
-                var style = OpenSpending.Styles.Cofog[name];
-                if (style != undefined) {
-                 return style['icon'];
-                }
-                return 'icons/unknown.svg';
-              });
-              db.draw();
-           }
-        });
-
+        Setter.setDailybread(db, $("#category-type").value, $("#fiscal-year").value);
         OpenSpending.renderDependentTypes(db);
+
       });
     })(jQuery)
   }
