--- a/bubbletree.html
+++ b/bubbletree.html
@@ -78,7 +78,7 @@ title: 使途別予算額
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
     <select id="kwsk_fiscal-year">
-    {% for fiscalyear in site.data.fiscalyears %}
+    {% for fiscalyear in site.data.kwsk.fiscalyears %}
       <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
     {% endfor %}
     </select>
@@ -86,7 +86,7 @@ title: 使途別予算額
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
     <select id="kwsk_category-type">
-    {% for categorytype in site.data.categorytypes %}
+    {% for categorytype in site.data.kwsk.categorytypes %}
       <option value="{{ categorytype.id }}" {{ categorytype.selected }}>{{ categorytype.text }}</option>
     {% endfor %}
     </select>
