--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@ title: 使途一日あたり
 ---
 
 <script>
+function updatePage(db, categoryType, fiscalYear) {
+  Setter.setConfig(categoryType, fiscalYear, function (data) {
+    db.children('#content-wrap').show();
+    db.children('#preloader').remove();
+
+    db.setDataFromAggregator(data, ['unknown']);
+    db.setIconLookup(function(name) {
+      var style = this.configs[categoryType].Styles.Cofog[name];
+      if (style != undefined) {
+        return style['icon'];
+      }
+      return 'icons/unknown.svg';
+    });
+    db.draw();
+  });
+  OpenSpending.renderDependentTypes(db);
+}
 
 yepnope({
   load: [
@@ -13,11 +30,12 @@ yepnope({
     '/js/libs/base64.js',
     '/js/libs/underscore.js',
     '/js/libs/raphael-min.js',
+    '/js/libs/kwsk/yaml.js',
     '/js/aggregator.js',
     '/css/dailybread.css',
     // '/js/setting.js?20150410',
-    '/js/setter.js?20150410',
-    '/js/dailybread.js?d20150410'
+    '/js/datamanager.js?20150430',
+    '/js/dailybread.js?d20150430'
   ],
   complete: function() {
 
@@ -27,20 +45,18 @@ yepnope({
 
         // イベント：会計年度
         $("#fiscal-year").change(function(){
-          Setter.setDailybread(db, $("#category-type").value, this.value);
+          updatePage(db, $("#category-type").value, this.value);
         });
         // イベント：分類タイプ
         $("#category-type").change(function(){
-          Setter.setDailybread(db, this.value, $("#fiscal-year").value);
+          updatePage(db, this.value, $("#fiscal-year").value);
         });
 
         // ページロード
         $('#preloader .txt').html('loading data');
 
         var db = new OpenSpending.DailyBread($('#dailybread'));
-        Setter.setDailybread(db, $("#category-type").value, $("#fiscal-year").value);
-        OpenSpending.renderDependentTypes(db);
-
+        updatePage(db, $("#category-type").value, $("#fiscal-year").value);
       });
     })(jQuery)
   }
