--- a/index.html
+++ b/index.html
@@ -118,10 +118,13 @@ yepnope({
 <script id="data-categorytypes" type="application/json">
 [
 {% for categorytype in site.data.categorytypes %}{
-    "id"          : {{ categorytype.id }}
-    "drilldowns"  : {{ categorytype.drilldowns }}
-    "breakdown"   : {{ categorytype.breakdown }}
-    "styles"       : {% for cofog in categorytype.cofogs %} { "{{ cofog.id }}" : {{ cofog.image }} }{% endfor %}
-  }{% if forloop.last %}{% else %},{% endif %}{% endfor %}
+    "id"          : {{ categorytype.id }},
+    "drilldowns"  : {{ categorytype.drilldowns }},
+    "breakdown"   : {{ categorytype.breakdown }},
+    "styles"      : {
+      {% for cofog in categorytype.cofogs %}{
+        "{{ cofog.id }}" : {{ cofog.image }}
+      }{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
+}{% if forloop.last %}{% else %},{% endif %}{% endfor %}
 ]
 </script>
