--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ yepnope({
     '/js/libs/base64.js',
     '/js/libs/underscore.js',
     '/js/libs/raphael-min.js',
-    '/js/libs/kwsk/yaml.js',
+    '/js/libs/yaml.js',
     '/js/aggregator.js',
     '/css/dailybread.css',
     // '/js/setting.js?20150410',
