--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@ yepnope({
     '/js/libs/base64.js',
     '/js/libs/underscore.js',
     '/js/libs/raphael-min.js',
-    '/js/libs/yaml.js',
     '/js/aggregator.js',
     '/css/dailybread.css',
-    // '/js/setting.js?20150410',
-    '/js/datamanager.js?20150430',
+    '/js/setting.js?20150410',
+    // '/js/datamanager.js?20150430',
     '/js/dailybread.js?20150430'
   ],
   complete: function() {
