--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ yepnope({
   あなたの市税は、1日当たり、どこで、いくら使われているか？
 </div><!-- /#dailybread -->
 <script id="data-categorytypes" type="application/json">
-[
 {% for categorytype in site.data.categorytypes %}{
   "id"          : {{ categorytype.id }},
-  "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
-  "breakdown"   : {{ categorytype.breakdown }},
-  "stylescofog"      : {{% for cofog in categorytype.cofogs %}
-    "{{ cofog.id }}" : {{ cofog.image }}{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
-}{% if forloop.last %}{% else %},{% endif %}{% endfor %}
-]
+  "data"        : {
+    "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
+    "breakdown"   : {{ categorytype.breakdown }},
+    "styles"      : {{% for cofog in categorytype.cofogs %}
+      "{{ cofog.id }}" : {{ cofog.image }}{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
+  }
+}{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
 </script>
