--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: 使途一日あたり
 ---
 
 <script>
-function updatePage(db, categoryType, fiscalYear) {
+function updatePage(db, categoryType, fiscalYear, data-json) {
   DataManager.setConfig(categoryType, fiscalYear, function (data) {
     db.children('#content-wrap').show();
     db.children('#preloader').remove();
@@ -49,6 +49,9 @@ yepnope({
         $("#category-type").change(function(){
           updatePage(db, this.value, $("#fiscal-year").value);
         });
+
+        // データマネージャーロード
+        DataManager.init($("#data-common"), $("#data-categorytypes"));
 
         // ページロード
         $('#preloader .txt').html('loading data');
