--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ yepnope({
     "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
     "breakdown"   : {{ categorytype.breakdown }},
     "styles"      : {{% for cofog in categorytype.cofogs %}
-      "{{ cofog.id }}" : {{ cofog.image }}{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
+      "{{ cofog.id }}" : {{ cofog.image }}{% if forloop.last %} } {% else %},{% endif %}{% endfor %}
   }
-}{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
+{% if forloop.last %}}{% else %},{% endif %}{% endfor %}
 </script>
