--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ yepnope({
   "data"        : {
     "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
     "breakdown"   : {{ categorytype.breakdown }},
-    "styles"      : {
-      {% for cofog in categorytype.cofogs %}"{{ cofog.id }}" : {{ cofog.image }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}
+    "styles"      : { {% for cofog in categorytype.cofogs %}
+      "{{ cofog.id }}" : {{ cofog.image }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}
     }
   }
 {% if forloop.last %}{% else %},{% endif %}{% endfor %}
