--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ yepnope({
         });
 
         // データマネージャーロード
-        DataManager.init($("#data-categorytypes").innerText);
+        DataManager.init($("#data-categorytypes").text());
 
         // ページロード
         $('#preloader .txt').html('loading data');
