--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ yepnope({
 </div><!-- /#dailybread -->
 <script id="data-categorytypes" type="application/json">
 [
-{% for categorytype in site.data.categorytypes %}{
-  "id"          : {{ categorytype.id }},
+{% for categorytype in site.data.categorytypes %}
+{ "id"          : {{ categorytype.id }},
   "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
   "breakdown"   : {{ categorytype.breakdown }},
   "styles"      : { {% for cofog in categorytype.cofogs %}
