--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ yepnope({
   "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
   "breakdown"   : {{ categorytype.breakdown }},
   "styles"      : { {% for cofog in categorytype.cofogs %}
-    "{{ cofog.id }}" : { icon : "{{ cofog.image.icon }}", color : "{{ cofog.image.color }}", bcolor : "{{ cofog.image.bcolor }}" } {% if forloop.last %}{% else %},{% endif %}{% endfor %}}
-  {% if forloop.last %}{% else %},{% endif %}{% endfor %}
+    "{{ cofog.id }}" : { icon : "{{ cofog.image.icon }}", color : "{{ cofog.image.color }}", bcolor : "{{ cofog.image.bcolor }}" } {% if forloop.last %}{% else %},{% endif %}{% endfor %}
+  }{% if forloop.last %}{% else %},{% endif %}{% endfor %}}
 ]
 </script>
