--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ yepnope({
         });
 
         // データマネージャーロード
+        console.log("start");
         var categories = [];
         categories = eval($("#data-categorytypes").text());
         console.log(categories);
