--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: 使途一日あたり
 <script>
 function updatePage(db, categoryType, fiscalYear) {
   DataManager.setConfig(categoryType, fiscalYear, function (data) {
+console.log("setConfig");
     db.children('#content-wrap').show();
     db.children('#preloader').remove();
 
@@ -51,7 +52,7 @@ yepnope({
         });
 
         // データマネージャーロード
-console.log("start");
+console.log("init");
         $.getJSON($("#data-categorytypes").text(), function(json) {
           new DataManager.init(json.categories);
         });
@@ -59,7 +60,9 @@ console.log("start");
         // ページロード
         $('#preloader .txt').html('loading data');
 
+console.log("dailybread");
         var db = new OpenSpending.DailyBread($('#dailybread'));
+console.log("updatePage");
         updatePage(db, $("#category-type").value, $("#fiscal-year").value);
       });
     })(jQuery)
