--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ yepnope({
         $('#preloader .txt').html('loading data');
 
         var db = new OpenSpending.DailyBread($('#dailybread'));
-console.log("db:" + db);
+console.log(db);
         updatePage(db, $("#category-type").value, $("#fiscal-year").value);
       });
     })(jQuery)
