--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: 使途一日あたり
 function updatePage(db, categoryType, fiscalYear) {
 
 console.log("Setting:");
+console.log(Setting.apiUrl);
 console.log(Setting.dataset[categoryType]);
 console.log(Setting.drilldowns[categoryType]);
 console.log(Setting.breakdown[categoryType]);
@@ -68,7 +69,7 @@ yepnope({
 
         // 設定ロード
         $.getJSON($("#data-categorytypes").text(), function(json) {
-          new Setting.init(json.categories);
+          Setting.init(json.categories);
         });
 
         // ページロード
