--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@ title: 使途一日あたり
 ---
 
 <script>
+
+var Setting = {
+  apiUrl: 'http://openspending.org/api',
+  rootNodeLabel: 'Total',
+  dataset: [],
+  drilldowns: [],
+  breakdown: [],
+  styles: [],
+
+  init: function(categorytypes) {
+    for (var categorytype in categorytypes) {
+      var type = eval(categorytype);
+
+      this.dataset[type.id] = type.id;
+      this.drilldowns[type.id] = type.drilldowns;
+      this.breakdown[type.id] = type.breakdown;
+      this.styles[type.id] = type.cofog;
+    }
+  }
+};
+
 function updatePage(db, categoryType, fiscalYear) {
 
 console.log("Setting:");
