--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ yepnope({
         });
 
         // 設定ロード
-        var jsonData = eval("(" + $("#data-categorytypes").text() + ")");
+        var jsonData = eval($("#data-categorytypes").text());
 
         // ページロード
         $('#preloader .txt').html('loading data');
