--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@ yepnope({
         });
 
         // 設定ロード
-        $.getJSON($("#data-categorytypes").text(), function(json) {
-          console.log(json);
+        console.log("#data-categorytypes").text());
+        $.getJSON($("#data-categorytypes").text(), null, function(json, status) {
+          console.log(status);
           Setting.init(json.categories);
           console.log("Load Setting:");
           console.log(Setting.apiUrl);
