--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@ yepnope({
 <script id="json-categorytypes" type="application/json">
 {"categories": [
 {% for categorytype in site.data.categorytypes %} {
-  "id"          : {{ categorytype.id }},
-  "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}{{ drilldown }}{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
-  "breakdown"   : {{ categorytype.breakdown }},
+  "id"          : "{{ categorytype.id }}",
+  "drilldowns"  : [{% for drilldown in categorytype.drilldowns %}"{{ drilldown }}"{% if forloop.last %}{% else %},{% endif %}{% endfor %}],
+  "breakdown"   : "{{ categorytype.breakdown }}",
   "styles"      : { {% for cofog in categorytype.cofogs %}
-    "{{ cofog.id }}" : { icon : "{{ cofog.image.icon }}", color : "{{ cofog.image.color }}", bcolor : "{{ cofog.image.bcolor }}" } {% if forloop.last %}{% else %},{% endif %}{% endfor %}}
+    "{{ cofog.id }}" : { "icon" : "{{ cofog.image.icon }}", "color" : "{{ cofog.image.color }}", "bcolor" : "{{ cofog.image.bcolor }}" } {% if forloop.last %}{% else %},{% endif %}{% endfor %}}
   }{% if forloop.last %}{% else %},{% endif %}{% endfor %}
 ]}
 </script>
